// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Picture renders correctly with preferThumbnails false 1`] = `
<picture>
  <img
    alt="title"
    css={
      {
        "name": "m2yydh",
        "next": undefined,
        "styles": "
	padding-top: 66.73913043478261%;
",
      }
    }
    height={123}
    image={
      {
        "layout": "FIXED",
      }
    }
    width={456}
  />
</picture>
`;

exports[`Picture renders correctly with preferThumbnails true 1`] = `
<picture>
  <img
    alt="title"
    css={
      {
        "name": "m2yydh",
        "next": undefined,
        "styles": "
	padding-top: 66.73913043478261%;
",
      }
    }
    height={123}
    image={
      {
        "layout": "FIXED",
      }
    }
    width={456}
  />
</picture>
`;

exports[`Picture renders correctly without extra props 1`] = `
<picture>
  <img
    alt="title"
    css={
      {
        "name": "m2yydh",
        "next": undefined,
        "styles": "
	padding-top: 66.73913043478261%;
",
      }
    }
    image={
      {
        "layout": "CONSTRAINED",
      }
    }
  />
</picture>
`;
